--- a/Date/date.html
+++ b/Date/date.html
@@ -21,6 +21,10 @@
             font-size: 20px;
         }
 
+        h2 {
+            text-align: center;
+        }
+
     </style>
 </head>
 <body>
@@ -29,6 +33,9 @@
     <button type="button" onclick="showDate()">Click Here</button>
 
     <p id="show"></p>
+
+    <h2 id="change">What is JavaScript.???</h2>
+    <button type="button" onclick="changeP()">Change Message</button>
 <script src="date.js"></script>
 </body>
 </html>
