--- a/Converter/index.html
+++ b/Converter/index.html
@@ -6,24 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Converter</title>
     <style>
-        h1 {
+        body{
             text-align: center;
         }
-
         p {
-            text-align: center;
             font-size: 25px;
         }
+
     </style>
 </head>
 <body>
     <h1>Converter Fahrenheit to Celsius</h1>
-
-    <p id="convert">0</p>
+    <p id="convert"></p>
     
-    <script src="">
-
-        
+    <script>
+        function converter(f){
+            return (5/9) * (f-32);
+        }
+        document.getElementById('convert').innerHTML = converter(77);
     </script>
 </body>
 </html>
