--- a/Date/date.html
+++ b/Date/date.html
@@ -14,6 +14,7 @@
 
         button {
             margin-left: 700px;
+            margin-top: 50px;
         }
 
         p {
@@ -36,6 +37,8 @@
 
     <h2 id="change">What is JavaScript.???</h2>
     <button type="button" onclick="changeP()">Change Message</button>
+
+    <button onclick="this.innerHTML=Date()">What time is it?</button>
 
 <script src="date.js"></script>
 </body>
