Added bkg to body and font

--- a/Clock/index.html
+++ b/Clock/index.html
@@ -7,10 +7,14 @@
     <title>Display clock</title>
 
     <style>
+        body {
+            background: #1d4350;
+        }
         h1{
             text-align: center;
-            font-size: 80px;
+            font-size: 100px;
             margin-top: 200px;
+            color: #fff;
         }
     </style>
 
