--- a/Clock/index.html
+++ b/Clock/index.html
@@ -15,6 +15,7 @@
             font-size: 100px;
             margin-top: 200px;
             color: #fff;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 
