--- a/Objects/object.html
+++ b/Objects/object.html
@@ -18,7 +18,7 @@
         };
 
         for (i in json) {
-            document.getElementById('do').innerHTML += i + '<br>';
+            document.getElementById('do').innerHTML += json[i] + '<br>';
         }
     </script>
 </body>
