Adding different way to change JSON object

--- a/Objects/nestedObject.html
+++ b/Objects/nestedObject.html
@@ -40,8 +40,10 @@
                 'device3' : 'PC'
             }
         };
+        // two different ways to change objects
         myjson.devices.device2 = 'macBookPro';
-        
+        myjson.devices['iPhone'] = 'iPhoneX';
+
         for(i in myjson.devices) {
             x += myjson.devices[i] + '<br>';
         }
