Adding new object

--- a/Objects/nestedObject.html
+++ b/Objects/nestedObject.html
@@ -17,6 +17,8 @@
 
     <h2 id="new"></h2>
 
+    <p class="demo"></p>
+
     <script>
         var json = {
             'name' : 'Israel',
@@ -91,5 +93,6 @@
         document.getElementById('new').innerHTML = x;        
 
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
