Adding new js file

--- a/Objects/object.html
+++ b/Objects/object.html
@@ -21,5 +21,6 @@
             document.getElementById('do').innerHTML += json[i] + '<br>';
         }
     </script>
+    <script src="../OOP/Object.js"></script>
 </body>
 </html>
