--- a/Objects/object.html
+++ b/Objects/object.html
@@ -22,5 +22,6 @@
         }
     </script>
     <script src="../OOP/Object.js"></script>
+    <script src="../OOP/constructor.js"></script>
 </body>
 </html>
