Adding prototype to the new js file

--- a/Objects/object.html
+++ b/Objects/object.html
@@ -23,5 +23,6 @@
     </script>
     <script src="../OOP/Object.js"></script>
     <script src="../OOP/constructor.js"></script>
+    <script src="../OOP/prototypes.js"></script>
 </body>
 </html>
