Adding new object

--- a/Objects/object.html
+++ b/Objects/object.html
@@ -24,5 +24,6 @@
     <script src="../OOP/Object.js"></script>
     <script src="../OOP/constructor.js"></script>
     <script src="../OOP/prototypes.js"></script>
+    <script src="../OOP/inheritance.js"></script>
 </body>
 </html>
